# Python

./: .gitattributes  .gitignore  .pre-commit-config.yml  .zenodo.json  CITATION.cff  LICENSE-QCDA  README.md  citation.bib  flake.nix  metadata.json  pre-commit-config.yaml
.github/workflows/: fh.yml  ontrack-ci.yml
00_How do I/1_Fine Tune/: FT.ipynb
00_How do I/2_Analyze_Data/: README.md  solar_analysis.ipynb  solar_analysis.py
1_Python/Python3.14/: .coveragerc  .editorconfig  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  HowToCompile.md  LICENSE  Makefile.pre.in  README.md  aclocal.m4  cbench.py  config.guess  config.sub  configure  configure.ac  pyconfig.h.in
2_HF/: README.md  pdf_viewer.html
2_HF/Models/: shutil.py
2_HF/Nemotron4/: .gitmodules  README.md  bashrc.txt  nemotron4.yml  zshrc.txt
2_HF/hf-hub/: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
3_Meta/llama-recipes/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  UPDATES.md  dev_requirements.txt  pyproject.toml  requirements.txt
4_OpenAI/whisper/: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  model-card.md  pyproject.toml  requirements.txt  setup.py
5_NVIDIA/DLI/: pptx2pdf.sh
5_NVIDIA/NeMo/: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  Dockerfile.ci  Dockerfile.speech  MANIFEST.in  README.md  pyproject.toml  reinstall.sh  setup.py
5_NVIDIA/cupy/: .coveragerc  .flake8.cython  .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  CITATION.bib  (+7 more)
6_Qompass/: update_meta.py
docs/: build.zig  build.zig.zon  zine.ziggy
east/: gptoss_ft.ipynb
ontrack/: .coverage  .env.example  .gitignore  README.md  TODO.md  build.sh  buildozer.spec  flake.nix  gradle.properties  main.py  ontrack.spec  pip.conf  pyproject.toml  requirements-android.txt  requirements.txt  scaffold_ontrack.py
ontrack-rs/: Cargo.toml
ontrack-rs/ontrack-core/: Cargo.toml
ontrack-rs/ontrack-core/src/: lib.rs  voice.rs
ontrack/assets/: convert.py
ontrack/config/: settings.py
ontrack/core/: exporter.py  geocoder.py  matrix.py  parser.py  solver.py  voice.py
ontrack/gui/: app.py
ontrack/gui/components/: address_table.py  file_picker.py  map_preview.py  voice_button.py
ontrack/gui/views/: home.py  results.py  settings.py
ontrack/installer/: build_installer.sh  installer.spec  ontrack_installer.py
ontrack/mobile/: app.py
ontrack/mobile/screens/: home.py  results.py  settings.py  voice.py
ontrack/pipewire/: 51-ontrack-echo-cancel.conf  README.md
ontrack/tests/: conftest.py  sample_addresses.csv  test_exporter.py  test_geocoder.py  test_matrix.py  test_parser.py  test_platform_compat.py  test_solver.py  test_voice.py
pip/: pip.conf
python/: par2csv.py
ruff/: README.md  pyproject.toml  ruff.toml
scripts/: build-all.sh  build-python.sh  conda.sh  cross-compile-rs.sh  nix-build-all.sh  quickstart.sh  setup.sh
uv/: uv.toml
(+7909 files in other folders)
