[package]
name        = "ontrack-core"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
description = "Core route optimization logic for OnTrack (geocoding, matrix, solver, export)"

[dependencies]
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
dotenvy     = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
csv         = { workspace = true }
urlencoding = { workspace = true }
tracing     = { workspace = true }

# Math
libm = "0.2"

[dev-dependencies]
tempfile = "3"
